fix: change scrollbar style

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,3 +36,24 @@ textarea {
   font-family: kalameh !important;
   text-align: center !important;
 }
+
+// change scrollbar default styles
+html {
+  --scrollbarBG: transparent;
+  --thumbBG: #555;
+}
+*::-webkit-scrollbar {
+  width: 6px;
+}
+* {
+  scrollbar-width: 6px;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+*::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+*::-webkit-scrollbar-thumb {
+  background-color: var(--thumbBG);
+  border-radius: 4px;
+  border: 1px solid #000;
+}
